crux-llvm/test-data/golden/T844-unstable.c
#include <stdlib.h>

int a = 0;

int main() {
  a++;
  int x;
  if (x && !x) {
    abort();
  }

  return 0;
}
